--- a/virtual_mechanism/CMakeLists.txt
+++ b/virtual_mechanism/CMakeLists.txt
@@ -87,11 +87,11 @@ add_library(${PROJECT_NAME} ${SHARED_OR_STATIC}
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
 ## Mark executables and/or libraries for installation
-#install(TARGETS ${PROJECT_NAME} ${BIN_TEST_NAME}
-#  ARCHIVE DESTINATION ${ARCHIVE_DESTINATION}
-#  LIBRARY DESTINATION ${LIBRARY_DESTINATION}
-#  RUNTIME DESTINATION ${RUNTIME_DESTINATION}
-#)
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${ARCHIVE_DESTINATION}
+  LIBRARY DESTINATION ${LIBRARY_DESTINATION}
+  RUNTIME DESTINATION ${RUNTIME_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
