Forgot to install the lib...

--- a/mechanism_manager/CMakeLists.txt
+++ b/mechanism_manager/CMakeLists.txt
@@ -99,11 +99,11 @@ add_dependencies(
 )
 
 ## Mark executables and/or libraries for installation
-#install(TARGETS ${PROJECT_NAME} ${BIN_TEST_NAME}
-#  ARCHIVE DESTINATION ${ARCHIVE_DESTINATION}
-#  LIBRARY DESTINATION ${LIBRARY_DESTINATION}
-#  RUNTIME DESTINATION ${RUNTIME_DESTINATION}
-#)
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${ARCHIVE_DESTINATION}
+  LIBRARY DESTINATION ${LIBRARY_DESTINATION}
+  RUNTIME DESTINATION ${RUNTIME_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
