--- a/mechanism_manager/package.xml
+++ b/mechanism_manager/package.xml
@@ -1,44 +1,17 @@
 <?xml version="1.0"?>
 <package>
-  <name>mechanism_manager</name>
+  <name>toolbox</name>
   <version>0.0.0</version>
-  <description>The mechanism_manager package</description>
+  <description>The toolbox package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="gennaro@todo.todo">gennaro</maintainer>
+  <maintainer email="gennaro.raiola(at)gmail.com">Gennaro Raiola</maintainer>
 
+  <license>GPLv2</license>
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <url type="website">https://github.com/graiola/virtual-fixtures</url>
 
+  <author email="gennaro.raiola(at)gmail.com">Gennaro Raiola</author>
 
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/mechanism_manager</url> -->
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>roslib</build_depend>
@@ -47,6 +20,7 @@
   <build_depend>toolbox</build_depend>
   <build_depend>virtual_mechanism</build_depend>
   <build_depend>message_generation</build_depend>
+
   <run_depend>roscpp</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>rospy</run_depend>
@@ -55,15 +29,4 @@
   <run_depend>virtual_mechanism</run_depend>
   <run_depend>message_runtime</run_depend>
 
-
-
-
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
 </package>
