toolbox license part 2

--- a/toolbox/package.xml
+++ b/toolbox/package.xml
@@ -8,7 +8,7 @@
 
   <license>GPLv2</license>
 
-  <url type="website">http://wiki.ros.org/toolbox</url>
+  <url type="website">https://github.com/graiola/virtual-fixtures</url>
 
   <author email="gennaro.raiola(at)gmail.com">Gennaro Raiola</author>
 
