--- a/vf_controller/package.xml
+++ b/vf_controller/package.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <package>
-  <name>toolbox</name>
+  <name>vf_controller</name>
   <version>0.0.0</version>
   <description>Virtual mechanism controller plugin for ros-control</description>
 
-  <maintainer email="gennaro.raiola(at)gmail.com">Gennaro Raiola</maintainer>
+  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
 
   <license>GPLv2</license>
 
   <url type="website">https://github.com/graiola/virtual-fixtures</url>
 
-  <author email="gennaro.raiola(at)gmail.com">Gennaro Raiola</author>
+  <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>control_toolbox</build_depend>
