--- a/vf_gui/package.xml
+++ b/vf_gui/package.xml
@@ -4,13 +4,13 @@
   <version>0.0.0</version>
   <description>Graphic interface</description>
 
-  <maintainer email="gennaro.raiola(at)gmail.com">Gennaro Raiola</maintainer>
+  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
 
   <license>GPLv2</license>
 
   <url type="website">https://github.com/graiola/virtual-fixtures</url>
 
-  <author email="gennaro.raiola(at)gmail.com">Gennaro Raiola</author>
+  <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
