--- a/mechanism_manager/package.xml
+++ b/mechanism_manager/package.xml
@@ -18,6 +18,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>toolbox</build_depend>
+  <build_depend>vf_gmr</build_depend>
   <build_depend>virtual_mechanism</build_depend>
   <build_depend>message_generation</build_depend>
 
@@ -26,6 +27,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>toolbox</run_depend>
+  <run_depend>vf_gmr</run_depend>
   <run_depend>virtual_mechanism</run_depend>
   <run_depend>message_runtime</run_depend>
 
