--- a/vf_gmr/package.xml
+++ b/vf_gmr/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>virtual_mechanism</name>
+  <name>vf_gmr</name>
   <version>0.0.0</version>
-  <description>Virtual Mechanism</description>
+  <description>GMR Library taken from https://github.com/stulp/dmpbbo</description>
 
   <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
 
@@ -13,11 +13,6 @@
   <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>toolbox</build_depend>
-  <build_depend>roslib</build_depend>
-  <build_depend>vf_gmr</build_depend>
-  <run_depend>toolbox</run_depend>
-  <run_depend>roslib</run_depend>
-  <run_depend>vf_gmr</run_depend>
+  
 
 </package>
