Catking doesn't like optional components, try another fix based on http://answers.ros.org/question/217719/optional-ros-package-and-catkin-dependencies/

--- a/virtual_mechanism/CMakeLists.txt
+++ b/virtual_mechanism/CMakeLists.txt
@@ -18,14 +18,11 @@ find_package(catkin REQUIRED COMPONENTS
   toolbox
   roslib
   vf_gmr
-  OPTIONAL_COMPONENTS
-  sensor_msgs
-  geometry_msgs
-  visualization_msgs
-  realtime_tools
 )
 
-if(realtime_tools_FOUND AND sensor_msgs_FOUND)
+find_package(realtime_tools QUIET)
+
+if(realtime_tools_FOUND)
    add_definitions(-DUSE_ROS_RT_PUBLISHER)
    message(STATUS "Realtime tools found")
 endif()
